@@ -1,11 +1,12 @@
 package teampixl.com.pixlpos.database;
 
+import javafx.collections.ObservableList;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import teampixl.com.pixlpos.constructs.Ingredients;
 import teampixl.com.pixlpos.constructs.MenuItem;
 import teampixl.com.pixlpos.constructs.Order;
 import teampixl.com.pixlpos.constructs.Users;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
-import javafx.collections.ObservableList;
 
 import java.util.Map;
 
@@ -18,17 +19,24 @@ class DataStoreTest {
     private static MenuItem sampleMenuItem;
     private static Users sampleUser;
     private static Order sampleOrder;
+    private static Ingredients sampleIngredient1;
+    private static Ingredients sampleIngredient2;
 
     @BeforeEach
     void setup() {
+        DatabaseHelper.initializeDatabase();
         dataStore = DataStore.getInstance();
         dataStore.clearData();  // Clear all data before each test
 
         // Sample MenuItem
-        sampleMenuItem = new MenuItem("Burger", 5.99, MenuItem.ItemType.MAIN, true, "A juicy burger", MenuItem.DietaryRequirement.GLUTEN_FREE);
+        sampleMenuItem = new MenuItem("Sample Item", 9.99, MenuItem.ItemType.MAIN, true, "Sample description", MenuItem.DietaryRequirement.NONE);
+
+        // Sample Ingredients
+        sampleIngredient1 = new Ingredients("Ingredient 1", "Ingredient 1 Notes");
+        sampleIngredient2 = new Ingredients("Ingredient 2", "Ingredient 2 Notes");
 
         // Sample User
-        sampleUser = new Users("john_doe", "password123", "john@example.com", Users.UserRole.WAITER);
+        sampleUser = new Users("sample_user", "password", "user@example.com", Users.UserRole.ADMIN);
 
         // Sample Order
         sampleOrder = new Order(1, (String) sampleUser.getMetadata().metadata().get("id"));
@@ -45,18 +53,18 @@ class DataStoreTest {
     @Test
     void testGetMenuItem() {
         dataStore.addMenuItem(sampleMenuItem);
-        MenuItem item = dataStore.getMenuItem("Burger");
+        MenuItem item = dataStore.getMenuItem("Sample Item");
         assertNotNull(item, "MenuItem should not be null");
-        assertEquals("Burger", item.getMetadata().metadata().get("itemName"));
+        assertEquals("Sample Item", item.getMetadata().metadata().get("itemName"));
     }
 
     @Test
     void testUpdateMenuItem() {
         dataStore.addMenuItem(sampleMenuItem);
-        sampleMenuItem.setDataValue("description", "A very juicy burger");
+        sampleMenuItem.setDataValue("description", "Updated description");
         dataStore.updateMenuItem(sampleMenuItem);
-        MenuItem updatedItem = dataStore.getMenuItems().getFirst();
-        assertEquals("A very juicy burger", updatedItem.getData().get("description"));
+        MenuItem updatedItem = dataStore.getMenuItems().get(0);
+        assertEquals("Updated description", updatedItem.getData().get("description"));
     }
 
     @Test
@@ -73,17 +81,17 @@ class DataStoreTest {
 
     @Test
     void testGetUser() {
-        Users user = dataStore.getUser("john_doe");
+        Users user = dataStore.getUser("sample_user");
         assertNotNull(user, "User should not be null");
-        assertEquals("john_doe", user.getMetadata().metadata().get("username"));
+        assertEquals("sample_user", user.getMetadata().metadata().get("username"));
     }
 
     @Test
     void testUpdateUser() {
-        sampleUser.setDataValue("email", "john_new@example.com");
+        sampleUser.setDataValue("email", "updated_email@example.com");
         dataStore.updateUser(sampleUser);
-        Users updatedUser = dataStore.getUsers().getFirst();
-        assertEquals("john_new@example.com", updatedUser.getData().get("email"));
+        Users updatedUser = dataStore.getUsers().get(0);
+        assertEquals("updated_email@example.com", updatedUser.getData().get("email"));
     }
 
     @Test
@@ -110,7 +118,7 @@ class DataStoreTest {
         dataStore.addOrder(sampleOrder);
         sampleOrder.updateOrderStatus(Order.OrderStatus.IN_PROGRESS);
         dataStore.updateOrder(sampleOrder);
-        Order updatedOrder = dataStore.getOrders().getFirst();
+        Order updatedOrder = dataStore.getOrders().get(0);
         assertEquals(Order.OrderStatus.IN_PROGRESS, updatedOrder.getMetadata().metadata().get("order_status"));
     }
 
@@ -125,7 +133,7 @@ class DataStoreTest {
     void testAddOrderItem() {
         dataStore.addOrder(sampleOrder);
         dataStore.addOrderItem(sampleOrder, sampleMenuItem, 2);
-        Order updatedOrder = dataStore.getOrders().getFirst();
+        Order updatedOrder = dataStore.getOrders().get(0);
         Map<String, Integer> menuItems = (Map<String, Integer>) updatedOrder.getData().get("menuItems");
         assertEquals(2, menuItems.get(sampleMenuItem.getMetadata().metadata().get("id")));
     }
@@ -135,7 +143,7 @@ class DataStoreTest {
         dataStore.addOrder(sampleOrder);
         dataStore.addOrderItem(sampleOrder, sampleMenuItem, 2);
         dataStore.updateOrderItem(sampleOrder, sampleMenuItem, 3);
-        Order updatedOrder = dataStore.getOrders().getFirst();
+        Order updatedOrder = dataStore.getOrders().get(0);
         Map<String, Integer> menuItems = (Map<String, Integer>) updatedOrder.getData().get("menuItems");
         assertEquals(3, menuItems.get(sampleMenuItem.getMetadata().metadata().get("id")));
     }
@@ -145,7 +153,7 @@ class DataStoreTest {
         dataStore.addOrder(sampleOrder);
         dataStore.addOrderItem(sampleOrder, sampleMenuItem, 2);
         dataStore.removeOrderItem(sampleOrder, sampleMenuItem, 2);
-        Order updatedOrder = dataStore.getOrders().getFirst();
+        Order updatedOrder = dataStore.getOrders().get(0);
         Map<String, Integer> menuItems = (Map<String, Integer>) updatedOrder.getData().get("menuItems");
         assertNull(menuItems.get(sampleMenuItem.getMetadata().metadata().get("id")));
     }
@@ -159,8 +167,57 @@ class DataStoreTest {
         assertEquals(0, dataStore.getOrders().size());
         assertEquals(0, dataStore.getUsers().size());
     }
+
+    @Test
+    void testAddIngredient() {
+        dataStore.addIngredient(sampleIngredient1);
+        assertEquals(1, dataStore.getIngredients().size());
+    }
+
+    @Test
+    void testUpdateIngredient() {
+        dataStore.addIngredient(sampleIngredient1);
+        sampleIngredient1.setDataValue("notes", "Updated notes");
+        dataStore.updateIngredient(sampleIngredient1);
+        Ingredients updatedIngredient = dataStore.getIngredients().get(0);  // Assuming the first ingredient in the list
+        assertEquals("Updated notes", updatedIngredient.getData().get("notes"));
+    }
+
+    @Test
+    void testRemoveIngredient() {
+        dataStore.addIngredient(sampleIngredient1);
+        dataStore.removeIngredient(sampleIngredient1);
+        assertEquals(0, dataStore.getIngredients().size());
+    }
+
+    @Test
+    void testAddMenuItemIngredient() {
+        dataStore.addMenuItem(sampleMenuItem);
+        dataStore.addMenuItemIngredient(sampleMenuItem, sampleIngredient1, 1.0);  // Assuming the numeral is 1.0
+        assertTrue(sampleMenuItem.hasIngredient((String) sampleIngredient1.getMetadata().metadata().get("ingredient_id")));
+    }
+
+    @Test
+    void testUpdateMenuItemIngredient() {
+        dataStore.addMenuItem(sampleMenuItem);
+        dataStore.addMenuItemIngredient(sampleMenuItem, sampleIngredient1, 1.0);
+        dataStore.updateMenuItemIngredient(sampleMenuItem, sampleIngredient1, 2.0);
+        Ingredients updatedIngredient = sampleMenuItem.getIngredients().get((String) sampleIngredient1.getMetadata().metadata().get("ingredient_id")).ingredient();
+        Object updatedNumeral = sampleMenuItem.getIngredients().get((String) sampleIngredient1.getMetadata().metadata().get("ingredient_id")).numeral();
+        assertEquals(2.0, updatedNumeral);
+    }
+
+    @Test
+    void testAddMenuItemIngredientWithNegativeNumeral() {
+        dataStore.addMenuItem(sampleMenuItem);
+        assertThrows(IllegalArgumentException.class, () -> dataStore.addMenuItemIngredient(sampleMenuItem, sampleIngredient1, -1.0));
+    }
+
+    @Test
+    void testUpdateMenuItemIngredientWithNegativeNumeral() {
+        dataStore.addMenuItem(sampleMenuItem);
+        dataStore.addMenuItemIngredient(sampleMenuItem, sampleIngredient1, 1.0);  // Assuming the numeral is 1.0
+        assertThrows(IllegalArgumentException.class, () -> dataStore.updateMenuItemIngredient(sampleMenuItem, sampleIngredient1, -1.0));
+    }
 }
-
-
-
 
